added some borders and set the buttons in a row

--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="instructions">
-                            <p id="one">#1</p>
-                            <p id="two">#2</p>
-                            <p id="three">#3</p>
-                            <p id="four">#4</p>
-                            <p id="five">#5</p>
+                            <p id="one">The game begins with a randomly-generated target number.</p>
+                            <p id="two">The four crystals each have a different value. Click on them to add to your total score.</p>
+                            <p id="three">Win the game by matching your score to the target number. If your score exceeds the target number, I'm afraid you'll lose and will have to try again.</p>
+                            <p id="four">The value of the crystals is hidden and changes with each new game!</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -55,19 +54,29 @@
                     </div>
                 </div>
 
-                
-                    <div class="button" id="redbutton">
-                        Red Button
+                <div class="row" id="buttonrow">
+
+                    <div class="col-md-3">
+                        <div class="button" id="redbutton">
+                            Red Button
+                        </div>
                     </div>
-                    <div class="button" id="bluebutton">
-                        Blue Button
+                    <div class="col-md-3">
+                        <div class="button" id="bluebutton">
+                            Blue Button
+                        </div>
                     </div>
-                    <div class="button" id="yellowbutton">
-                        Yellow Button
+                        <div class="col-md-3">
+                        <div class="button" id="yellowbutton">
+                            Yellow Button
+                        </div>
                     </div>
-                    <div class="button" id="greenbutton">
-                        Green Button
+                    <div class="col-md-3">
+                        <div class="button" id="greenbutton">
+                            Green Button
+                        </div>
                     </div>
+                </div>
                     
             </div>
 
