--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div id="randomnumberbox">
-                            Random Number
+                            Target Number
                             <span id="randomNumber"></span>
                         </div>
                         <div id="winsbox">
